[package]
name = "msstore_ctcdn"
version = "1.0.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
eyre = "0.6"
color-eyre = "0.6.5"

[target.'cfg(target_os = "windows")'.dependencies]
native-windows-gui = "1.0.13"
native-windows-derive = "1.0.3"
# Needed for GetConsoleWindow/ShowWindow
winapi = { version = "0.3", features = ["winuser", "wincon", "windef", "sysinfoapi"] }

[build-dependencies]
embed-resource = "2.1"
